# invoice-generator

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml  test.yml
assets/: index-C80Ld0Rn.js  index-CB0SpExJ.css
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ErrorDialog.tsx  ImageUploadField.tsx  InvoiceDocument.tsx
src/components/custom/: LabelInput.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  switch.tsx
src/context/: InvoiceContext.tsx
src/features/: Actions.tsx  InvoiceInfo.tsx  InvoicePreview.tsx
src/features/info/bills/: BillForm.tsx  FromAndTo.tsx
src/features/info/details/: InvoiceDetails.tsx
src/features/info/items/: LineItemRow.tsx  LineItems.tsx  SortableLineItem.tsx
src/features/info/payment/: PaymentInfo.tsx
src/features/info/summary/: Summary.tsx  (+1 more)
src/lib/: calculations.ts  defaults.ts  helpers.ts  parseInvoiceJson.ts  schema.ts
src/locales/: en.json  pt-BR.json
src/test/: fixtures.ts  setup.ts
src/test/components/: ErrorDialog.test.tsx  ImageUploadField.test.tsx  InvoiceDocument.test.tsx  LabelInput.test.tsx
src/test/context/: InvoiceContext.test.tsx
src/test/features/: Actions.test.tsx  BillForm.test.tsx  InvoiceInfo.test.tsx  LineItems.test.tsx  SummaryAdjustmentRow.test.tsx
src/test/lib/: calculations.test.ts  helpers.test.ts  parseInvoiceJson.test.ts  schema.test.ts
src/types/: invoice.ts  number-to-words.d.ts
