[package]
name = "invoice-generator"
version = "1.0.0"
description = "A modern, client-side invoice generator built with React and Tauri"
authors = ["dpieve"]
license = "MIT"
repository = "https://github.com/dpieve/invoice-generator"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
